# libpinyin

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  Makefile.data  NEWS  README  README.md  autogen.sh  config.h.cmake  configure.ac  libpinyin.pc.in  libpinyin.spec.in  libzhuyin.pc.in
.github/workflows/: build.yml  cmake.yml  make-check.yml
cmake/: FindBerkeleyDB.cmake  FindGLIB2.cmake  FindKyotoCabinet.cmake
data/: CMakeLists.txt  Makefile.am  art.table  culture.table  economy.table  gb_char.table  gbk_char.table  geology.table  history.table  life.table  merged.table  nature.table  opengram.license  opengram.table  people.table  punct.table  science.table  society.table  sport.table  table.conf  table.conf.in  technology.table
data_pinyin/: Makefile.am
data_zhuyin/: Makefile.am
doc/: Makefile.am  gen_binary_files.1  import_interpolation.1  libpinyin.1
scripts/: Makefile.data  bopomofo.py  chewing.py  chewing_enum.h.in  chewing_table.h.in  chewingkey.py  correct.py  double_pinyin_table.h.in  fuzzy.py  genbopomofoheader.py  genchewingkey.py  gendoublepinyinheader.py  genpinyin2.awk  genpinyinheader.py  genpinyins.awk  genpinyins.py  genpinyintable.py  genpytable.py  genspecialtable.py  gentable.py  pinyin.py  pinyin_parser_table.h.in  pinyintable.py  pydict.py  specials.txt  specialtable.py  utils.py
scripts2/: Makefile.data  bopomofo.py  bopomofotable.py  chewing.py  doublepinyin.py  doublepinyintable.py  fetch_pinyin.py  fullpinyin.py  fullpinyintable.py  generateheader.py  options.py  pyzymap.py  specials.txt  specialtable.py  utils.py  zhuyin.py
scripts2/templates/: chewing_enum.h.in  double_pinyin_table.h.in  pinyin_parser_table.h.in  special_table.h.in  zhuyin_table.h.in
scripts2/tools/: distill.py
src/: CMakeLists.txt  Makefile.am  libpinyin.exp  libpinyin.ver  libzhuyin.exp  libzhuyin.ver  pinyin.cpp  pinyin.h  pinyin_internal.cpp  pinyin_internal.h  zhuyin.cpp  zhuyin.h
src/include/: CMakeLists.txt  Makefile.am  memory_chunk.h  novel_types.h  pinyin_utils.h  stl_lite.h  unaligned_memory.h
src/lookup/: CMakeLists.txt  Makefile.am  lookup.cpp  lookup.h  phonetic_lookup.cpp  phonetic_lookup.h  phonetic_lookup_heap.h  phonetic_lookup_linear.h  phrase_lookup.cpp  phrase_lookup.h  pinyin_lookup.cpp  pinyin_lookup.h  pinyin_lookup2.cpp  pinyin_lookup2.h  winner_tree.cpp  winner_tree.h
src/segment/: Makefile.am  mmseg.cpp  spseg.cpp
src/storage/: CMakeLists.txt  Makefile.am  bdb_utils.h  chewing_enum.h  chewing_key.cpp  chewing_key.h  chewing_large_table.cpp  chewing_large_table.h  chewing_large_table2.cpp  chewing_large_table2.h  chewing_large_table2_bdb.cpp  chewing_large_table2_bdb.h  chewing_large_table2_kyotodb.cpp  chewing_large_table2_kyotodb.h  chewing_large_table2_tkrzwdb.cpp  chewing_large_table2_tkrzwdb.h  chewing_table.h  double_pinyin_table.h  facade_chewing_table.h  facade_chewing_table2.h  facade_phrase_table.h  facade_phrase_table2.h  facade_phrase_table3.h  flexible_ngram.h  flexible_ngram_bdb.h  flexible_ngram_kyotodb.h  flexible_ngram_tkrzwdb.h  flexible_single_gram.h  kyotodb_utils.h  ngram.cpp  ngram.h  ngram_bdb.cpp  ngram_bdb.h  ngram_kyotodb.cpp  ngram_kyotodb.h  ngram_tkrzwdb.cpp  ngram_tkrzwdb.h  phonetic_key_matrix.cpp  phonetic_key_matrix.h  phrase_index.cpp  (+47 more)
src/training/: estimate_interpolation.cpp  gen_ngram.cpp  gen_unigram.cpp
tests/: CMakeLists.txt  Makefile.am  test_chewing.cpp  test_phrase.cpp  test_pinyin.cpp  test_zhuyin.cpp  tests_helper.h  timer.h
tests/include/: CMakeLists.txt  Makefile.am  test_memory_chunk.cpp
tests/lookup/: CMakeLists.txt  Makefile.am  test_phrase_lookup.cpp  test_pinyin_lookup.cpp  test_simple_lookup.cpp
tests/storage/: CMakeLists.txt  Makefile.am  test_chewing_table.cpp  test_flexible_ngram.cpp  test_matrix.cpp  test_ngram.cpp  test_parser.cpp  test_parser2.cpp  test_phrase_index.cpp  test_phrase_index_logger.cpp  test_phrase_table.cpp  test_pinyin_index.cpp  test_pinyin_table.cpp  test_punct_table.cpp  test_table_info.cpp
utils/: CMakeLists.txt  Makefile.am  utils_helper.h
utils/segment/: CMakeLists.txt  Makefile.am  mergeseq.cpp  ngseg.cpp  spseg.cpp
utils/storage/: CMakeLists.txt  Makefile.am  export_interpolation.cpp  gen_binary_files.cpp  gen_chewing_table.cpp  gen_pinyin_table.cpp  gen_zhuyin_map.cpp  gen_zhuyin_table.cpp  import_interpolation.cpp  tag_utility.cpp  tag_utility.h
utils/training/: CMakeLists.txt  Makefile.am  estimate_interpolation.cpp  estimate_k_mixture_model.cpp  eval_correction_rate.cpp  export_k_mixture_model.cpp  gen_deleted_ngram.cpp  gen_k_mixture_model.cpp  gen_ngram.cpp  gen_unigram.cpp  import_k_mixture_model.cpp  k_mixture_model.h  k_mixture_model_to_interpolation.cpp  merge_k_mixture_model.cpp  prune_k_mixture_model.cpp  validate_k_mixture_model.cpp
